--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,14 +4,6 @@
     </div>
 </div>
 
-<div class="card-columns mt-4">
-
-    <div class="card" *ngFor="let artista of artistas">
-        <img class="card-img-top" [src]= "artista.images | noimage" alt="">
-        <div class="card-body">
-                <h4 class="card-title"> {{ artista.name }}</h4>
-        </div>
-    </div>
-</div>
+<app-tarjeta [items] = "artistas"></app-tarjeta>
 
 
