--- a/src/app/components/shared/tarjeta/tarjeta.component.html
+++ b/src/app/components/shared/tarjeta/tarjeta.component.html
@@ -1,1 +1,14 @@
-<p>tarjeta works!</p>
+<div class="card-columns">
+
+    <div class="card" *ngFor="let item of items">
+        <img class="card-img-top" [src]= "item.images | noimage" [alt]=" item.name ">
+        <div class="card-body">
+                <h4 class="card-title"> {{ item.name }}</h4>
+                <p class="card-text" >
+                    <span class="badge badge-pill badge-primary" *ngFor="let item of item.artists">{{ item.name }}</span>
+                </p>
+        </div>
+    </div>
+</div>
+
+
