--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -1,1 +1,44 @@
-<p>artista works!</p>
+<app-loadin *ngIf="loading"></app-loadin>
+
+<div class="row animated fadeIn" *ngIf="!loading">
+        <div class="col-2">
+            <img [src]="artist.images[0].url" class="img-thumbnail img-circle">
+        </div>
+        <div class="col">
+            <h3> {{ artist.name }}</h3>
+
+                <a [href]="artist.external_urls.spotify" target="_blank">
+                    Ir a la pagina del artista
+                </a>
+        </div>
+        <div class="col-4">
+                <button type="button" class="btn btn-success" [routerLink]="['/search']">Regresar</button>
+        </div>
+</div>
+
+<div class="row m-5">
+    <div class="col">
+        <table class="table text-white">
+            <thead>
+                <tr>
+                    <th>Foto</th>
+                    <th>Album</th>
+                    <th>Cancion</th>
+                    <th>Vista Previa</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let top of topTracks">
+                    <td>
+                        <img [src]="top.album.images[0].url" class="img-fluid img-thumb">
+                    </td>
+                    <td>{{ top.album.name }}</td>
+                    <td> {{ top.name }}</td>
+                    <td>
+                        <iframe [src]= "top.uri | domSeguro:'https://open.spotify.com/embed?uri='" width="300" height="100" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
