--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,9 +1,10 @@
 <div class="row">
     <div class="col">
-        <input #termino type="text" (keyup)="buscar( termino.value )" class="form-control" placeholder="Buscar Artista...">
+        <input #termino type="text" (keyup)="buscar( termino.value )" class="form-control" placeholder="Buscar Artista..." id="input">
     </div>
 </div>
 
-<app-tarjeta [items] = "artistas"></app-tarjeta>
+<app-loadin *ngIf="loading"></app-loadin>
+<app-tarjeta  *ngIf="!loading" [items] ="artistas"></app-tarjeta>
 
 
