--- a/src/app/components/shared/tarjeta/tarjeta.component.html
+++ b/src/app/components/shared/tarjeta/tarjeta.component.html
@@ -1,6 +1,7 @@
-<div class="card-columns">
 
-    <div class="card" *ngFor="let item of items">
+<div class="card-columns animated fadeIn mt-3">
+
+    <div (click)="verArtista( item )" class="card puntero" *ngFor="let item of items">
         <img class="card-img-top" [src]= "item.images | noimage" [alt]=" item.name ">
         <div class="card-body">
                 <h4 class="card-title"> {{ item.name }}</h4>
